--- a/amigosservices/fraud/src/main/resources/application.yml
+++ b/amigosservices/fraud/src/main/resources/application.yml
@@ -19,4 +19,7 @@ spring:
     client:
       service-url:
         defaultZone: http://localhost:8761/eureka
+      fetch-registry: true
+      register-with-eureka: true
+      enabled: true
 
