--- a/amigosservices/pom.xml
+++ b/amigosservices/pom.xml
@@ -16,6 +16,7 @@
     <module>notification</module>
     <module>eureka-server</module>
     <module>clients</module>
+    <module>apigw</module>
   </modules>
 
 
