--- a/amigosservices/pom.xml
+++ b/amigosservices/pom.xml
@@ -17,6 +17,7 @@
     <module>eureka-server</module>
     <module>clients</module>
     <module>apigw</module>
+    <module>amqp</module>
   </modules>
 
 
