--- a/amigosservices/pom.xml
+++ b/amigosservices/pom.xml
@@ -1,32 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.amigoscode</groupId>
   <artifactId>amigosservices</artifactId>
-  <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
+  <version>1.0-SNAPSHOT</version>
 
-  <name>amigosservices</name>
-  <url>https://www.amigoscode.com</url>
   <modules>
     <module>customer</module>
     <module>fraud</module>
-    <module>notification</module>
     <module>eureka-server</module>
     <module>clients</module>
+    <module>notification</module>
     <module>apigw</module>
     <module>amqp</module>
   </modules>
 
+  <name>amigosservices</name>
+  <url>https://www.amigoscode.com</url>
 
   <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
-    <spring.boot.dependecies.version>2.5.7</spring.boot.dependecies.version>
     <spring.boot.maven.plugin.version>2.5.7</spring.boot.maven.plugin.version>
-    <spring.cloud.version>2020.0.3</spring.cloud.version>
+    <spring.boot.dependencies.version>2.5.7</spring.boot.dependencies.version>
+    <spring.cloud-version>2020.0.3</spring.cloud-version>
+    <image>amigoscode/${project.artifactId}:${project.version}</image>
   </properties>
 
   <dependencyManagement>
@@ -34,14 +37,14 @@
       <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-dependencies</artifactId>
-        <version>${spring.boot.dependecies.version}</version>
+        <version>${spring.boot.dependencies.version}</version>
         <scope>import</scope>
         <type>pom</type>
       </dependency>
       <dependency>
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-dependencies</artifactId>
-        <version>${spring.cloud.version}</version>
+        <version>${spring.cloud-version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -64,15 +67,33 @@
   </dependencies>
 
   <build>
-    <pluginManagement>
+    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
-          <groupId>com.springframework.boot</groupId>
+          <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-maven-plugin</artifactId>
           <version>${spring.boot.maven.plugin.version}</version>
+          <executions>
+            <execution>
+              <goals>
+                <goal>repackage</goal>
+              </goals>
+            </execution>
+          </executions>
         </plugin>
+
       </plugins>
     </pluginManagement>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.0</version>
+        <configuration>
+          <source>17</source>
+          <target>17</target>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
-
 </project>
